--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -208,7 +208,11 @@
     "ThebeartamerEntity": true,
     "ThebidyupsideEntity": true,
     "ThewolfEntity": true,
-    "DireHoundLeaderEntity": true
+    "DireHoundLeaderEntity": true,
+    "TrollenragedEntity": true,
+    "SlavemanEntity": true,
+    "TheimmortalEntity": true,
+    "EntityFoliaath": true
   },
   "entitiesalwaysinfernal": {
     "BoulderingDrowned": false,
@@ -325,7 +329,11 @@
     "ThebeartamerEntity": false,
     "ThebidyupsideEntity": false,
     "ThewolfEntity": false,
-    "DireHoundLeaderEntity": false
+    "DireHoundLeaderEntity": false,
+    "TrollenragedEntity": false,
+    "SlavemanEntity": false,
+    "TheimmortalEntity": false,
+    "EntityFoliaath": false
   },
   "entitybasehealth": {
     "InvisicloggerEntity": 100.0,
@@ -400,6 +408,14 @@
     "BoulderingDrowned": 20.0,
     "ThewolfEntity": 45.0,
     "DireHoundLeaderEntity": 100.0,
-    "ThebidyEntity": 10.0
+    "ThebidyEntity": 10.0,
+    "ThebidyupsideEntity": 12.0,
+    "DarkVortexEntity": 35.0,
+    "InvisicreeperEntity": 1.0,
+    "SlavemanEntity": 20.0,
+    "ThehorrorsdecoysEntity": 50.0,
+    "ZombieBruiserEntity": 60.0,
+    "BarrelZombieEntity": 30.0,
+    "SuckerEntity": 15.0
   }
 }
