--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,53 +4,55 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
-    "minecraft:pointed_dripstone": false,
     "minecraft:crafting_table": false,
     "minecraft:oak_log": false,
-    "minecraft:deepslate_coal_ore": false,
-    "minecraft:dirt": false,
-    "born_in_chaos_v1:black_argillite": false,
     "minecraft:cobbled_deepslate": false,
     "minecraft:dripstone_block": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
+    "evilcraft:dark_ore": false,
+    "quark:violet_corundum": false,
+    "minecraft:deepslate_iron_ore": false,
+    "minecraft:acacia_leaves": false,
+    "minecraft:deepslate_diamond_ore": false,
+    "supplementaries:urn": false,
+    "minecraft:oak_leaves": false,
+    "minecraft:granite": false,
+    "minecraft:cobblestone": false,
+    "minecraft:cobweb": false,
+    "minecraft:tuff": false,
+    "quark:violet_corundum_cluster": false,
+    "minecraft:diorite": false,
+    "minecraft:acacia_log": false,
+    "minecraft:stone": false,
+    "minecraft:ladder": false,
+    "minecraft:amethyst_block": false,
+    "luminousworld:ishstone": false,
+    "luminousworld:savannah_ground": false,
+    "born_in_chaos_v1:infected_diamond_ore": false,
+    "minecraft:rail": false,
+    "minecraft:pointed_dripstone": false,
+    "minecraft:deepslate_coal_ore": false,
+    "minecraft:dirt": false,
+    "born_in_chaos_v1:black_argillite": false,
     "minecraft:lapis_ore": false,
     "minecraft:gravel": false,
     "quark:monster_box": false,
     "minecraft:deepslate_gold_ore": false,
-    "evilcraft:dark_ore": false,
-    "quark:violet_corundum": false,
-    "minecraft:deepslate_iron_ore": false,
-    "minecraft:deepslate_diamond_ore": false,
     "minecraft:oak_planks": false,
     "luminousworld:bao_bob_log": false,
     "minecraft:amethyst_cluster": false,
     "luminousworld:savannah_soil": false,
     "minecraft:oak_fence": false,
-    "supplementaries:urn": false,
     "minecraft:andesite": false,
     "minecraft:deepslate": false,
-    "minecraft:oak_leaves": false,
-    "minecraft:granite": false,
     "evilcraft:dark_ore_deepslate": false,
-    "minecraft:cobblestone": false,
-    "minecraft:cobweb": false,
-    "minecraft:tuff": false,
     "minecraft:copper_ore": false,
     "iceandfire:silver_ore": false,
-    "quark:violet_corundum_cluster": false,
-    "minecraft:diorite": false,
     "minecraft:small_amethyst_bud": false,
-    "minecraft:acacia_log": false,
-    "minecraft:stone": false,
     "minecraft:smooth_basalt": false,
-    "minecraft:amethyst_block": false,
-    "luminousworld:ishstone": false,
     "born_in_chaos_v1:infected_deepslate_diamond_ore": false,
-    "luminousworld:savannah_ground": false,
-    "minecraft:iron_ore": false,
-    "born_in_chaos_v1:infected_diamond_ore": false,
-    "minecraft:rail": false
+    "minecraft:iron_ore": false
   },
   "bannedItems": {
     "minecraft:crafting_table": false,
@@ -69,7 +71,8 @@
     "vampirism:heart_seeker_enhanced": false,
     "minecraft:wooden_pickaxe": false,
     "minecraft:torch": false,
-    "minecraft:stone_pickaxe": false
+    "minecraft:stone_pickaxe": false,
+    "iceandfire:raw_silver": false
   },
   "disableForAllTileEntities": false,
   "disableAutoRegisterNames": false
